--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
-    <main>
+    <main id="main1">
         <nav class="nav">
             <div class="navbar">
                 <div class="logo">
@@ -23,7 +23,7 @@
             <section class="home_page">
                 <div class="header">
                     <div>
-                        <img src="music_logo_150.png" alt="logo_img">
+                        <img src="music_logo_150.png" alt="logo_img" >
                     </div>
                     
                     <div>
@@ -78,16 +78,6 @@
                         <h2>Frost Children</h2>
                         <h3>Speed Run</h3>
                     </div>
-                    <div>
-                        <img src="joey_valence_and_brae_no_hands.jpg" alt="Joey Valence & Brae - No Hands">
-                        <h2>Joey Valence &amp; Brae</h2>
-                        <h3>No Hands</h3>
-                    </div>
-                    <div>
-                        <img src="gorillaz_plastic_beach.jpg" alt="Gorillaz - Plastic Beach">
-                        <h2>Gorillaz</h2>
-                        <h3>Plastic Beach</h3>
-                    </div>
                 </div>
             </section>
             <section class="album_page">
@@ -102,10 +92,16 @@
                         <h2>JPEGMAFIA</h2>
                         <h3>I Lay Down My Life For You</h3>
                     </div>
-                </div>
-            </section>
-            <section class="artist_page">
-                <div id="grid-container">
+                    <div>
+                        <img src="feeble_little_horse_girl_with_fish.jpg" alt="Feeble Little Horse - Girl With Fish">
+                        <h2>Feeble Little Horse</h2>
+                        <h3>Girl With Fish</h3>
+                    </div>
+                    <div>
+                        <img src="frost_children_speed_run.jpg" alt="Frost Children - Speed Run">
+                        <h2>Frost Children</h2>
+                        <h3>Speed Run</h3>
+                    </div>
                     <div>
                         <img src="joey_valence_and_brae_no_hands.jpg" alt="Joey Valence & Brae - No Hands">
                         <h2>Joey Valence &amp; Brae</h2>
@@ -118,16 +114,66 @@
                     </div>
                 </div>
             </section>
+            <section class="artist_page">
+                <div id="grid-container">
+                    <div>
+                        <figure>
+                            <img src="daft_punk.jpg" alt="Daft Punk">
+                            <figcaption>Daft Punk</figcaption>
+                        </figure>
+                        <h3>Genres: French House, Electronic, French Electro, Electroclash, Funky House, Disco</h3>
+                    </div>
+                    <div>
+                        <figure>
+                            <img src="jpegmafia.jpg" alt="JPEGMAFIA">
+                            <figcaption>JPEGMAFIA</figcaption>
+                        </figure>
+                        <h3>Genres: Experimental Hip Hop, Cloud Rap, Hardcore Hip Hop, Glitch Hop, Industrial Hip Hop, Alternative R&B</h3>
+                    </div>
+                    <div>
+                        <figure>
+                            <img src="feeble_little_horse.png" alt="Feeble Litlle Horse">
+                            <figcaption>Feeble Little Horse</figcaption>
+                        </figure>
+                        <h3>Genres: Slacker Rock, Noise Pop, Indie Pop</h3>
+                    </div>
+                    <div>
+                        <figure>
+                            <img src="frost_children.png" alt="Frost Children">
+                            <figcaption>Frost Children</figcaption>
+                        </figure>
+                        <h3>Genres: Hyperpop, Electropop, Electro House, Indie Rock, Indie Pop, Digital Hardcore</h3>
+                    </div>
+                    <div>
+                        <figure>
+                            <img src="joey_valence_and_brae.jpg" alt="Joey Valence & Brae">
+                            <figcaption>Joey Valence &amp; Brae</figcaption>
+                        </figure>
+                        <h3>Genres: East Coast Hip Hop, Hardcore Hip Hop, Boom Bap, Mid-School Hip Hop, Miami Bass, Rap Rock</h3>
+                    </div>
+                    <div>
+                        <figure>
+                            <img src="gorillaz.png" alt="Gorillaz">
+                            <figcaption>Gorillaz</figcaption>
+                        </figure>
+                        <h3>Genres: Electropop, Art Pop, Synthpop, Trip Hop, Alternative Rock, Alternative Dance</h3>
+                    </div>
+                </div>
+            </section>
         </article>
-        <aside>
+        <aside class="aside_content">
             <section class="home_page">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/L93-7vRfxNs?si=dGjzNEmjyGxtzB5l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video">
+                    <h2>One of My Favorite Songs!</h2>
+                </div>
+                
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/L93-7vRfxNs?si=dGjzNEmjyGxtzB5l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </section>
             <section class="album_page">
-                <!-- <img src="music_logo_150.png" alt="test"> -->
             </section>
             <section class="artist_page">
-                <!-- <img src="music_logo_150.png" alt="test"> -->
             </section>
         </aside>
         <footer>
